# Miscellaneous

./: .gitignore  Array2D.java  Battleship Game.py  README.md  RandRollcall.cpp  data.csv  maze.cpp  statistics.csv  statistics.java  upcasting.java
C++/: RandRollcall.cpp  bm.cpp  bmh.cpp  epoll.cpp  heap.cpp  kmp.cpp  quicksort.cpp
C++/SAMPLE Compiler/: .gitignore  CMakeLists.txt  info.hpp  main.cpp
C++/SAMPLE Compiler - Lexical analyzer/: .gitignore  info.hpp  main.cpp
C++/SAMPLE Compiler/libs/: Scanner.cpp
C++/SAMPLE Compiler/tests/: test1.in
C/OS-labs/: .gitignore  Makefile
Java/: Makefile  data.csv  statistics.csv  statistics.java
Java/servlet/: README.md  index.jsp  insert.jsp  testBean.jsp
Java/socket/: Makefile  client.java  server.java  socket.java
Java/statistics/: data.csv
JavaScript/: README.md  chap1.js
LaTeX/: Data-Structures.tex  b-plus-tree.tex  linked-list.tex
LaTeX/Data Structure/: README.md  b-plus-tree.tex  binary-tree.tex  code-block.tex  forest.tex  full-version.tex  inline-code.tex  linked-list.tex  normal-tree(with forest).tex  normal-tree(with tikz).tex  normal-tree.tex  sample.cpp
LaTeX/Database/: README.md  er-diagram.tex  er-graph.tex  paragraph-level.tex  query-tree.tex  relation-algebra-syntax-tree.tex  (+2 more)
Python/: Battleship.py  TCP_Client.py  TCP_Server.py
Snippets/: DengDuaURL.user.js  book_location_api.php  copyright-notice.html  copyright-notice.md  hash_demo.php  heading-fix.js  lyric-style.html  sms-template.html  target_blank.js  trans_test.sql
UserScripts/: DengDuaURL.user.js  PoHuYaoWan.user.js
(+82 files in other folders)
